Adds geo origin

--- a/scheme-measurement-or-fact.json
+++ b/scheme-measurement-or-fact.json
@@ -45,7 +45,7 @@
         }
     },
     "required":
-    [
+    [   "schemeMeasurementType",
         "mandatoryMetric",
         "repeatableMetric"
     ]
